tests/test_data/CodeStructureSnippets/bad/sem_err_4.3.ifj21
require "ifj21"
function main()
    local vysl : string = 1
end
main()
